Обновлено управление файлом fav.png
- Изменена конфигурация в файле проекта `bankrupt-piterjust.csproj` для обновления обработки файла `fav.png`.
- Ранее файл `fav.png` был удален из проекта, теперь он помечен как упакованный ресурс.
- Установлены свойства `<Pack>True</Pack>` и `<PackagePath>\</PackagePath>`, чтобы включить его в выходной пакет на корневом уровне.
- Конфигурация для `Images\fav.png` осталась без изменений и также будет упакована.

--- a/bankrupt-piterjust.csproj
+++ b/bankrupt-piterjust.csproj
@@ -18,14 +18,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="fav.png" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Resource Include="fav.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="fav.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Update="Images\fav.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
