--- a/bankrupt-piterjust.csproj
+++ b/bankrupt-piterjust.csproj
@@ -32,4 +32,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="9.0.3" />
+  </ItemGroup>
+
 </Project>
