--- a/bankrupt-piterjust.csproj
+++ b/bankrupt-piterjust.csproj
@@ -36,4 +36,8 @@
     <PackageReference Include="Npgsql" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Documents\" />
+  </ItemGroup>
+
 </Project>
