--- a/bankrupt-piterjust.csproj
+++ b/bankrupt-piterjust.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
   </ItemGroup>
 
