Удалены старые иконки, добавлена новая
- Удален бинарный файл `fav.png`.
- В `MainWindow.xaml` иконка изменена с `fav.png` на `icon.png`.
- В `AddDebtorWindow.xaml` иконка также изменена с `fav.png` на `icon.png`.
- В `DatabaseSettingsWindow.xaml` иконка обновлена с `fav.png` на `icon.png`, цвет фона остался прежним.
- В `LoginWindow.xaml` иконка изменена с `fav.png` на `icon.png`, изменен порядок атрибутов `Background` и `KeyDown`.
- В проекте `bankrupt-piterjust.csproj` удалена ссылка на `fav.png`, добавлен новый ресурс для `icon.png`.
- Добавлен новый ресурс для `icon.png` в отдельной группе элементов в проекте.
- Добавлен новый бинарный файл `icon.png`, содержащий данные изображения.

--- a/bankrupt-piterjust.csproj
+++ b/bankrupt-piterjust.csproj
@@ -18,10 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Images\fav.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
+    <None Remove="Views\icon.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +29,10 @@
 
   <ItemGroup>
     <Folder Include="Documents\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\icon.png" />
   </ItemGroup>
 
 </Project>
