--- a/bankrupt-piterjust.csproj
+++ b/bankrupt-piterjust.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net9.0-windows10.0.17763.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
     <RootNamespace>bankrupt_piterjust</RootNamespace>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
     <Title>ПитерЮст. Банкротство.</Title>
     <Authors>Сапрыкин Семён Максимович</Authors>
