Изменены заголовки и обновлен проект
- В файле `MainWindow.xaml` изменены заголовки двух элементов `DataGridTemplateColumn`: "ФИО должника" изменен на "ФИО должника" с новой шириной `1.5*`, а "Дата" изменен на "Дата заключения договора".
- Удален `TextBlock` для "Статус" и `Button`, отображающий статус должника. `TextBlock` для "Дата" также заменен на "Дата заключения договора".
- В файле `bankrupt-piterjust.csproj` обновлена целевая платформа с `net8.0-windows10.0.17763.0` на `net9.0-windows10.0.26100.0`. Добавлены новые свойства, включая `SupportedOSPlatformVersion`, `ApplicationIcon` и `AssemblyName`.
- Добавлены две новые группы свойств для конфигураций Debug и Release, обе с указанием `DebugType` как `embedded`.
- Добавлена группа элементов для включения файла `icon.ico`, а элемент `None` для `Views\icon.png` удален.
- Добавлен файл `icon.ico`, содержащий бинарные данные для значка, используемого в приложении.

--- a/bankrupt-piterjust.csproj
+++ b/bankrupt-piterjust.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
+    <TargetFramework>net9.0-windows10.0.26100.0</TargetFramework>
     <RootNamespace>bankrupt_piterjust</RootNamespace>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -16,10 +16,25 @@
     <PackageIcon>fav.png</PackageIcon>
     <NeutralLanguage>ru</NeutralLanguage>
     <PackageProjectUrl>https://питерюст.рф/</PackageProjectUrl>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+    <ApplicationIcon>Images\icon.ico</ApplicationIcon>
+    <AssemblyName>ПитерЮст. Банкротство.</AssemblyName>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Views\icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Images\icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
