Улучшена реализация команд и конфигурации базы данных
- Модифицирован класс `RelayCommand` для упрощения и улучшения документации.
- Добавлены комментарии и метод `Clone` в `DatabaseConfiguration.cs`.
- В `Converters.cs` добавлены новые конвертеры и улучшена функциональность существующих.
- Улучшено поведение ввода валюты в `CurrencyInputBehavior.cs` с новыми комментариями и логикой.
- Обновлен `NumberToWordsConverter.cs` для лучшего представления чисел в текстовом формате.
- Изменен путь к шаблонам в `DocumentGenerationService.cs` с "Documents" на "TemplatesDocx".
- Обновлен файл проекта `bankrupt-piterjust.csproj` для изменения структуры папок и включения генерации документации.

--- a/bankrupt-piterjust.csproj
+++ b/bankrupt-piterjust.csproj
@@ -18,7 +18,8 @@
     <PackageProjectUrl>https://питерюст.рф/</PackageProjectUrl>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
     <ApplicationIcon>Images\icon.ico</ApplicationIcon>
-    <AssemblyName>ПитерЮст. Банкротство.</AssemblyName>
+    <AssemblyName>ПитерЮст. Банкротство</AssemblyName>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -44,7 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Documents\" />
+    <Folder Include="TemplatesDocx\" />
   </ItemGroup>
 
   <ItemGroup>
