Отключена генерация документации
- Изменено свойство <GenerateDocumentationFile> с True на False.
- Генерация файлов документации теперь отключена для проекта.

--- a/bankrupt-piterjust.csproj
+++ b/bankrupt-piterjust.csproj
@@ -19,7 +19,7 @@
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
     <ApplicationIcon>Images\icon.ico</ApplicationIcon>
     <AssemblyName>ПитерЮст. Банкротство</AssemblyName>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
